Traduccion Equipo y Mision Actual. Otros.

--- a/src/app/layouts/home/en-currentyeartour/en-currentyeartour.component.html
+++ b/src/app/layouts/home/en-currentyeartour/en-currentyeartour.component.html
@@ -1,1 +1,42 @@
-<p>en-currentyeartour works!</p>
+<!--======================================== -->
+  <!--========== CURRENT YEAR TOUR =========== -->
+  <!--======================================== -->
+
+  <section id="currentYearTour" class="pt-4 pb-4">
+
+    <!--========= NORMAL SCREEN CURRENT YEAR TOUR TITLE ========= -->
+    <div id="normalScreenCurrentYearTourTitle" class="col text-center mt-4 mb-5">
+      <p class="title2"><span id="currentYearTourFirstSpan">2025 </span><span id="currentYearTourSecondSpan">MISSION TOUR</span></p>
+    </div>
+
+    <!--========= CELL PHONE CURRENT YEAR TOUR TITLE ========= -->
+    <div id="cellPhoneCurrentYearTourTitle" class="col text-center mt-4 mb-5">
+        <p class="title2">
+            <span id="currentYearTourFirstSpan">2025</span>
+            <br>
+            <br>
+            <span id="currentYearTourSecondSpan">MISSION TOUR</span>
+        </p>
+    </div>
+    
+    <div class="row mb-2">
+        <div class="imageContainer">
+                <img src="../assets/img/brochure2.jpeg" alt="">
+        </div>
+        <div class="imageContainer">
+                <img src="../assets/img/brochure3.jpeg" alt="">
+        </div>
+        <div class="imageContainer">
+                <img src="../assets/img/brochure4.jpeg" alt="">
+        </div>
+    </div>
+    
+    <!-- <div class="row">
+      <div class="imageContainer">
+        <img src="../assets/img/brochure5.jpeg" alt="">
+      </div>
+      <div class="imageContainer">
+        &nbsp;
+      </div>
+    </div> -->
+  </section>
