--- a/src/app/layouts/home/currentyear-tour/currentyear-tour.component.scss
+++ b/src/app/layouts/home/currentyear-tour/currentyear-tour.component.scss
@@ -7,100 +7,100 @@
 @media only screen and (min-width: 1047px) {
 
 
-    //=========== NORMAL SCREEN CURRENT YEAR TOUR ===========//
-  
-    #currentYearTour {
-  
-      #cellPhoneCurrentYearTourTitle {
-        display: none;
-      }
-  
-      #normalScreenCurrentYearTourTitle {
-  
-          display: block;
-  
-          #currentYearTourFirstSpan {
-            font-size: 1.9rem;
-            color:  var(--bs-dark-rgb);
-            letter-spacing: 4px;
-            margin: 0 auto;
-            padding-bottom: 0px;
-            margin-bottom: 0px;
-            text-align: center;
-          } 
-  
-          #currentYearTourSecondSpan {
-            font-size: 2.5rem;
-            color: #3f51b5 !important;
-            letter-spacing: 6px;
-            margin: 0 auto;
-            padding-bottom: 5px;
-            margin-bottom: 40px;
-          } 
-      }
-  
-      .row {
-
-          // display: flex;
-          justify-content: center;
-          width: 100%;
-          margin: 0 auto;
-          margin-bottom: 0px;
-          // padding: 0;
-    
-    
-          .imageContainer {
-              max-width: 350px;
-              padding: 0;
-              margin-left: 20px;
-              margin-right: 20px;
-              margin-bottom: 30px;
+      #currentYearTour {
+      
+          #cellPhoneCurrentYearTourTitle {
+            display: none;
           }
-    
-          .imageContainer img {
-              width: 100%;
-              height: auto;
+      
+          #normalScreenCurrentYearTourTitle {
+      
               display: block;
       
+              #currentYearTourFirstSpan {
+                  font-size: 1.9rem;
+                  color:  var(--bs-dark-rgb);
+                  letter-spacing: 4px;
+                  margin: 0 auto;
+                  padding-bottom: 0px;
+                  margin-bottom: 0px;
+                  text-align: center;
+              } 
       
-              // border-radius: 12px;
-              // border: 6px double #d4af37; /* Borde dorado doble */
-              // background-color: #fff;
-              // box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-              // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-      
-      
-              // border: 6px solid #4CAF50; /* Color del marco */
-              // border-radius: 10px; /* Bordes redondeados */
-              // padding: 10px; /* Espacio entre el marco y la imagen */
-              // background-color: #ffffff; /* Fondo blanco detrás del marco */
-              // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombra para añadir elegancia */
-              // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-      
-      
-              border: 9px solid #fff; // Borde blanco
-              box-shadow: 0 4px 8px rgba(0, 0, 0, 0.986); // Sombra suave
-              border-radius: 10px; // Bordes redondeados
-              transition: transform 0.3s ease, box-shadow 0.3s ease;
-      
-            
-              &:hover {
-                  // transform: scale(1.05);
-                  // box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
-        
-                  // transform: scale(1.05); /* Efecto de zoom al pasar el ratón */
-                  // box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Más sombra al hacer hover */
-        
-                  transform: scale(1.05); // Efecto de zoom al pasar el mouse
-                  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); // Sombra más pronunciada al pasar e
-          
-              }
-    
+              #currentYearTourSecondSpan {
+                  font-size: 2.5rem;
+                  color: #3f51b5 !important;
+                  letter-spacing: 6px;
+                  margin: 0 auto;
+                  padding-bottom: 5px;
+                  margin-bottom: 40px;
+              } 
           }
-  
-      }
-  
-    }
+      
+          .row {
+
+              // display: flex;
+              width: 100%;
+              justify-content: center;
+              align-items: center;
+              margin: 0 auto;
+              margin-bottom: 0px;
+              padding-left: 60px;
+              padding-right: 60px;
+              // padding: 0;
+        
+              .imageContainer {
+                  max-width: 350px;
+                  padding: 0;
+                  margin-left: 20px;
+                  margin-right: 20px;
+                  margin-bottom: 30px;
+              }
+        
+              .imageContainer img {
+                  width: 100%;
+                  height: auto;
+                  display: block;
+          
+          
+                  // border-radius: 12px;
+                  // border: 6px double #d4af37; /* Borde dorado doble */
+                  // background-color: #fff;
+                  // box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+                  // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+          
+          
+                  // border: 6px solid #4CAF50; /* Color del marco */
+                  // border-radius: 10px; /* Bordes redondeados */
+                  // padding: 10px; /* Espacio entre el marco y la imagen */
+                  // background-color: #ffffff; /* Fondo blanco detrás del marco */
+                  // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombra para añadir elegancia */
+                  // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+          
+          
+                  border: 9px solid #fff; // Borde blanco
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.986); // Sombra suave
+                  border-radius: 10px; // Bordes redondeados
+                  transition: transform 0.3s ease, box-shadow 0.3s ease;
+          
+                
+                  &:hover {
+                      // transform: scale(1.05);
+                      // box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+            
+                      // transform: scale(1.05); /* Efecto de zoom al pasar el ratón */
+                      // box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Más sombra al hacer hover */
+            
+                      transform: scale(1.05); // Efecto de zoom al pasar el mouse
+                      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); // Sombra más pronunciada al pasar e
+              
+                  }
+        
+              } //end imageContainer img
+
+          } //end row
+    
+      } //end currentYearTour
   
   } //end normal screen
   
@@ -115,141 +115,135 @@
   @media only screen and (max-width: 1046px) {
   
   
-    //=========== CELL PHONE CURRENT YEAR TOUR ===========//
-  
-    #currentYearTour {
-  
-  
-        #normalScreenCurrentYearTourTitle {
-          display: none;
-        }
-  
-        #cellPhoneCurrentYearTourTitle {
-  
-            display: block;
-  
-            #currentYearTourFirstSpan {
-              font-size: 1.9rem;
-              color:  var(--bs-dark-rgb);
-              letter-spacing: 4px;
-              margin: 0 auto;
-              padding-bottom: 0px;
-              margin-bottom: 0px;
-              text-align: center;
-            } 
-  
-            #currentYearTourSecondSpan {
-              font-size: 2.5rem;
-              color: #3f51b5 !important;
-              letter-spacing: 6px;
-              // margin: 0 auto;
-              padding-bottom: 5px;
-              margin-bottom: 20px;
-              // text-align: center;
-              // @media only screen and (max-width: 415px) {
-              //   padding-top: 20px !important;
-              // }
-            } 
-        }
-  
-        .row {
-          
-            // display: flex;
-            justify-content: center;
-            width: 100%;
-            padding: 0;
-            margin: 0 auto;
-
-            // @media only screen and (max-width: 1046px) {
-            //   margin: 0px 0px;
-            // }
-
-            // @media only screen and (max-width: 868px) {
-            //   margin: 0px 30px;
-            //   // padding: 0px 20px;
-            // }
-  
-            .imageContainer {
-                // display: block;
-                width: 100%;
-                max-width: 350px;
-                margin-left: 0px;
-                margin-right: 0px;
-                margin-bottom: 30px;
-                // justify-content: center;
-
-                @media only screen and (max-width: 1046px) {
-                  padding-left: 20px;
-                  padding-right: 20px;
-                }
-
-                @media only screen and (max-width: 691px) {
-                  padding-left: 0px;
-                  padding-right: 0px;
-                }
+      #currentYearTour {
     
-                @media only screen and (max-width: 376px) {
-                  padding-left: 20px;
-                  padding-right: 20px;
-                  // padding: 0px 20px;
-                }
     
-                // @media only screen and (max-width: 868px) {
-                //   margin-left: 30px;
-                //   margin-right: 30px;
-                //  // padding: 0px 20px;
-                // }
-
-            }
-  
-            .imageContainer img {
-              width: 100%;
-              height: auto;
+          #normalScreenCurrentYearTourTitle {
+              display: none;
+          }
+    
+          #cellPhoneCurrentYearTourTitle {
+    
               display: block;
-  
-  
-              // border-radius: 12px;
-              // border: 6px double #d4af37; /* Borde dorado doble */
-              // background-color: #fff;
-              // box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-              // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  
-  
-              // border: 6px solid #4CAF50; /* Color del marco */
-              // border-radius: 10px; /* Bordes redondeados */
-              // padding: 10px; /* Espacio entre el marco y la imagen */
-              // background-color: #ffffff; /* Fondo blanco detrás del marco */
-              // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombra para añadir elegancia */
-              // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  
-  
-              border: 9px solid #fff; // Borde blanco
-              box-shadow: 0 4px 8px rgba(0, 0, 0, 0.986); // Sombra suave
-              border-radius: 10px; // Bordes redondeados
-              transition: transform 0.3s ease, box-shadow 0.3s ease;
-  
+    
+              #currentYearTourFirstSpan {
+                  font-size: 1.9rem;
+                  color:  var(--bs-dark-rgb);
+                  letter-spacing: 4px;
+                  margin: 0 auto;
+                  padding-bottom: 0px;
+                  margin-bottom: 0px;
+                  text-align: center;
+              } 
+    
+              #currentYearTourSecondSpan {
+                  font-size: 2.5rem;
+                  color: #3f51b5 !important;
+                  letter-spacing: 6px;
+                  // margin: 0 auto;
+                  padding-bottom: 5px;
+                  margin-bottom: 20px;
+                  // text-align: center;
+                  // @media only screen and (max-width: 415px) {
+                  //   padding-top: 20px !important;
+                  // }
+              } 
+          }
+    
+          .row {
             
-              &:hover {
-                // transform: scale(1.05);
-                // box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
-  
-                // transform: scale(1.05); /* Efecto de zoom al pasar el ratón */
-                // box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Más sombra al hacer hover */
-  
-                transform: scale(1.05); // Efecto de zoom al pasar el mouse
-                box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); // Sombra más pronunciada al pasar e
-            
-              }
-  
-            }
-  
-        }
-  
-    }
-  
+              // display: flex;
+              justify-content: center;
+              width: 100%;
+              padding: 0;
+              margin: 0 auto;
+
+              // @media only screen and (max-width: 1046px) {
+              //   margin: 0px 0px;
+              // }
+
+              // @media only screen and (max-width: 868px) {
+              //   margin: 0px 30px;
+              //   // padding: 0px 20px;
+              // }
+    
+              .imageContainer {
+                  // display: block;
+                  width: 100%;
+                  max-width: 350px;
+                  margin-left: 0px;
+                  margin-right: 0px;
+                  margin-bottom: 30px;
+                  // justify-content: center;
+
+                  @media only screen and (max-width: 1046px) {
+                    padding-left: 20px;
+                    padding-right: 20px;
+                  }
+
+                  @media only screen and (max-width: 691px) {
+                    padding-left: 0px;
+                    padding-right: 0px;
+                  }
       
+                  @media only screen and (max-width: 376px) {
+                    padding-left: 20px;
+                    padding-right: 20px;
+                    // padding: 0px 20px;
+                  }
+      
+                  // @media only screen and (max-width: 868px) {
+                  //   margin-left: 30px;
+                  //   margin-right: 30px;
+                  //  // padding: 0px 20px;
+                  // }
+
+              } //end imageContainer
+    
+              .imageContainer img {
+                  width: 100%;
+                  height: auto;
+                  display: block;
+      
+      
+                  // border-radius: 12px;
+                  // border: 6px double #d4af37; /* Borde dorado doble */
+                  // background-color: #fff;
+                  // box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+                  // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      
+      
+                  // border: 6px solid #4CAF50; /* Color del marco */
+                  // border-radius: 10px; /* Bordes redondeados */
+                  // padding: 10px; /* Espacio entre el marco y la imagen */
+                  // background-color: #ffffff; /* Fondo blanco detrás del marco */
+                  // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombra para añadir elegancia */
+                  // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      
+      
+                  border: 9px solid #fff; // Borde blanco
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.986); // Sombra suave
+                  border-radius: 10px; // Bordes redondeados
+                  transition: transform 0.3s ease, box-shadow 0.3s ease;
+      
+                
+                  &:hover {
+                    // transform: scale(1.05);
+                    // box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+      
+                    // transform: scale(1.05); /* Efecto de zoom al pasar el ratón */
+                    // box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Más sombra al hacer hover */
+      
+                    transform: scale(1.05); // Efecto de zoom al pasar el mouse
+                    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); // Sombra más pronunciada al pasar e
+                
+                  }
+    
+              } //end imageContainer img
+    
+          } //end row
+    
+      } //end currentYearTour
+  
   
   } //end cell phone
-  
-  
-  
