--- a/src/app/layouts/home/home.component.scss
+++ b/src/app/layouts/home/home.component.scss
@@ -309,13 +309,13 @@ header {
 						.submenu-list {
 							height: 100%;
 							margin: 0 auto;
-							position: relative;
-							top: 14px;
+							// position: relative;
+							// top: 0px;
 
 							div {
 
 								height: 2.5rem;
-								padding-left: 28px;
+								padding-left: 20px;
 								text-decoration: none;
 								// color: #1976d2; /* Color de los enlaces */
 								
@@ -458,6 +458,7 @@ header {
 
 					#cellPhoneText {
 						display: block;
+						max-width: 100px;
 						text-align: left;
 						font-weight: normal;
 						font-size: 14px;
