--- a/src/app/layouts/home/identity/identity.component.html
+++ b/src/app/layouts/home/identity/identity.component.html
@@ -23,7 +23,7 @@
                             <div class="col">
                                 <p id="identityTitleFirstLine" class="title">{{ 'HOME.IDENTITY.TITLE' | translate }}</p>
                                 <p class="text">
-                                    <span class="highlightText">{{ 'HOME.GAMA_MEANING' | translate }}</span>
+                                    <span class="highlightText">{{ 'HOME.GAMA_MEANING' | translate }}:</span>
                                     {{ 'HOME.IDENTITY.PARAGRAPH' | translate }}.
                                 </p>
                             </div>
