--- a/src/app/layouts/home/team/team.component.html
+++ b/src/app/layouts/home/team/team.component.html
@@ -4,54 +4,58 @@
   <!--======================================== -->
 
   <section id="speakers" class="mb-3 pb-5">
-    <div class="container">
-      <div id="speakersSpaceAtBeginning" class="row"></div>
+      <div class="container">
+          <div id="speakersSpaceAtBeginning" class="row"></div>
 
 
-      <!--========= NORMAL SCREEN IDENTITY TITLE ========= -->
-      <div class ="col text-center d-none d-md-block">
-          <p id="speakerTitleFirstLine" class="title2">CONOCE A LOS</p> 
-          <br>
-          <p id="speakertitleSecondLine" class="title2">MIEMBROS DEL EQUIPO</p>
-      </div> 
+          <!--========= NORMAL SCREEN IDENTITY TITLE ========= -->
+          <div class ="col text-center d-none d-md-block">
+              <p id="speakerTitleFirstLine" class="title2">{{ 'HOME.TEAM.NORMAL_SCREEN.TITLE1' | translate }}</p> 
+              <br>
+              <p id="speakertitleSecondLine" class="title2">{{ 'HOME.TEAM.NORMAL_SCREEN.TITLE2' | translate }}</p>
+          </div> 
 
-      <!--========== CELL PHONE IDENTITY TITLE ========== -->
-      <div class ="col text-center d-block d-md-none">
-          <p id="speakerTitleFirstLine" class="title2">CONOCE AL</p> 
-          <br>
-          <p id="speakertitleSecondLine" class="title2">EQUIPO</p>
-      </div>
+          <!--========== CELL PHONE IDENTITY TITLE ========== -->
+          <div class ="col text-center d-block d-md-none">
+              <p id="speakerTitleFirstLine" class="title2">{{ 'HOME.TEAM.CELL_PHONE.TITLE1' | translate }}</p> 
+              <br>
+              <p id="speakertitleSecondLine" class="title2">{{ 'HOME.TEAM.CELL_PHONE.TITLE2' | translate }}</p>
+          </div>
 
-      <div id="speakersCardRow" class="row">
-        <div id="speakersCol" class="col-md-0 col-lg-2"></div>
-        <div class="cardCol col-md-6 col-lg-4 mb-4">
-            <div class="card">
-                <img id="valerioPhoto" src="../assets/img/foto-valerio-4.jpg" alt="Foto de Valerio">
-                <div class="card-body">
-                  <div class="mb-3">
-                    <span class="custom-badge warning">Misiones</span>
-                    <span class="custom-badge success">Evangelismo</span>
+          <div id="speakersCardRow" class="row">
+              <div id="speakersCol" class="col-md-0 col-lg-2"></div>
+
+              <div class="cardCol col-md-6 col-lg-4 mb-4">
+                  <div class="card">
+                      <img id="valerioPhoto" src="../assets/img/foto-valerio-4.jpg" alt="Foto de Valerio">
+                      <div class="card-body">
+                          <div class="mb-3">
+                              <span class="custom-badge warning">{{ 'HOME.TEAM.BADGE.MISSIONS' | translate }}</span>
+                              <span class="custom-badge success">{{ 'HOME.TEAM.BADGE.EVANGELISM' | translate }}</span>
+                          </div>
+                          <p class="title card-body-title text-dark">Valerio Andras</p>
+                          <hr>
+                          <p class="text2">{{ 'HOME.TEAM.VALERIO.DESCRIPTION' | translate }}.</p>
+                      </div>
                   </div>
-                  <p class="title card-body-title text-dark">Valerio Andras</p>
-                  <hr>
-                  <p class="text2">Misionero a tiempo completo, participa en programas de radio, evangelismo en universidades, tours misioneros por Europa así como viajes por todo el mundo equipando a las iglesias en evangelismo.</p>
-                </div>
-            </div>
-        </div>
-        <div class="cardCol col-md-6 col-lg-4 mb-4">
-            <div class="card">
-                <img src="../assets/img/foto-guillermo-2.jpg" alt="Foto de Guillermo">
-                <div class="card-body">
-                  <div class="badges mb-3">
-                    <span class="custom-badge info">Ingeniería</span>
-                    <span class="custom-badge success">Evangelismo</span>
+              </div>
+
+              <div class="cardCol col-md-6 col-lg-4 mb-4">
+                  <div class="card">
+                      <img src="../assets/img/foto-guillermo-2.jpg" alt="Foto de Guillermo">
+                      <div class="card-body">
+                        <div class="badges mb-3">
+                          <span class="custom-badge info">{{ 'HOME.TEAM.BADGE.ENGINEERING' | translate }}</span>
+                          <span class="custom-badge success">{{ 'HOME.TEAM.BADGE.EVANGELISM' | translate }}</span>
+                        </div>
+                        <p class="title card-body-title text-dark">Guillermo Baldán</p>
+                        <hr>
+                        <p id="guillermoCardText" class="text2">{{ 'HOME.TEAM.GUILLERMO.DESCRIPTION' | translate }}.</p>
+                    </div>
                   </div>
-                  <p class="title card-body-title text-dark">Guillermo Baldán</p>
-                  <hr>
-                  <p id="guillermoCardText" class="text2">Ingeniero de profesión, se encarga de dar apoyo a la obra misionera en todo tipo de tareas logísticas y técnicas además de participar activamente en campañas evangelísticas.</p>
-               </div>
-            </div>
-        </div>
+              </div>
+
+          </div>
+        
       </div>
-    </div>
   </section>
